--- a/BlokeeAutomation/BlokusApplication/GameRoom/PlayGame.xaml
+++ b/BlokeeAutomation/BlokusApplication/GameRoom/PlayGame.xaml
@@ -64,9 +64,9 @@
       <AssemblyReference>System.Memory</AssemblyReference>
       <AssemblyReference>UiPath.UIAutomationCore</AssemblyReference>
       <AssemblyReference>UiPath.OCR.Activities.Design</AssemblyReference>
-      <AssemblyReference>System.Runtime.WindowsRuntime</AssemblyReference>
       <AssemblyReference>System.Runtime.Serialization</AssemblyReference>
       <AssemblyReference>UiPath.System.Activities.Design</AssemblyReference>
+      <AssemblyReference>System.Runtime.WindowsRuntime</AssemblyReference>
     </scg:List>
   </TextExpression.ReferencesForImplementation>
   <Sequence DisplayName="PlayGame" sap:VirtualizedContainerService.HintSize="499,981" sap2010:WorkflowViewState.IdRef="Sequence_1">
@@ -95,22 +95,14 @@
     </ui:MultipleAssign>
     <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="Invoke GetPlayerIndex workflow" sap:VirtualizedContainerService.HintSize="457,112" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_2" LogEntry="No" LogExit="No" UnSafe="False" WorkflowFileName="BlokusApplication\GameRoom\GameOperations\GetPlayerIndex.xaml">
       <ui:InvokeWorkflowFile.Arguments>
-        <InArgument x:TypeArguments="ui:UiElement" x:Key="in_BrowserWindow">
-          <mva:VisualBasicValue x:TypeArguments="ui:UiElement" ExpressionText="in_BrowserWindow" />
-        </InArgument>
-        <InArgument x:TypeArguments="scg:Dictionary(x:String, x:Object)" x:Key="in_Config">
-          <mva:VisualBasicValue x:TypeArguments="scg:Dictionary(x:String, x:Object)" ExpressionText="in_Config" />
-        </InArgument>
-        <OutArgument x:TypeArguments="x:Int32" x:Key="out_PlayerIndex">
-          <mva:VisualBasicReference x:TypeArguments="x:Int32" ExpressionText="PlayerIndex" />
-        </OutArgument>
-        <InArgument x:TypeArguments="x:String" x:Key="in_PlayerName">
-          <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="in_PlayerName" />
-        </InArgument>
+        <InArgument x:TypeArguments="ui:UiElement" x:Key="in_BrowserWindow">[in_BrowserWindow]</InArgument>
+        <InArgument x:TypeArguments="scg:Dictionary(x:String, x:Object)" x:Key="in_Config">[in_Config]</InArgument>
+        <OutArgument x:TypeArguments="x:Int32" x:Key="out_PlayerIndex">[PlayerIndex]</OutArgument>
+        <InArgument x:TypeArguments="x:String" x:Key="in_PlayerName">[in_PlayerName]</InArgument>
       </ui:InvokeWorkflowFile.Arguments>
     </ui:InvokeWorkflowFile>
     <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="457,91" sap2010:WorkflowViewState.IdRef="LogMessage_1" Level="Info" Message="[&quot;Player Index in current game: &quot; + PlayerIndex.ToString]" />
-    <ui:InterruptibleWhile DisplayName="While the game is not finished" sap:VirtualizedContainerService.HintSize="457,468" sap2010:WorkflowViewState.IdRef="InterruptibleWhile_1">
+    <ui:InterruptibleWhile Condition="[not gameOver]" DisplayName="While the game is not finished" sap:VirtualizedContainerService.HintSize="457,468" sap2010:WorkflowViewState.IdRef="InterruptibleWhile_1">
       <ui:InterruptibleWhile.Body>
         <Sequence DisplayName="Body" sap:VirtualizedContainerService.HintSize="421,303" sap2010:WorkflowViewState.IdRef="Sequence_2">
           <sap:WorkflowViewStateService.ViewState>
@@ -120,26 +112,15 @@
           </sap:WorkflowViewStateService.ViewState>
           <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="Invoke WaitUntilCurrentPlayerTurn workflow" sap:VirtualizedContainerService.HintSize="379,112" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_1" LogEntry="No" LogExit="No" UnSafe="False" WorkflowFileName="BlokusApplication\GameRoom\GameOperations\WaitUntilCurrentPlayerTurn.xaml">
             <ui:InvokeWorkflowFile.Arguments>
-              <InArgument x:TypeArguments="ui:UiElement" x:Key="in_BrowserWindow">
-                <mva:VisualBasicValue x:TypeArguments="ui:UiElement" ExpressionText="in_BrowserWindow" />
-              </InArgument>
-              <InArgument x:TypeArguments="x:String" x:Key="in_PlayerName">
-                <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="in_PlayerName" />
-              </InArgument>
-              <InArgument x:TypeArguments="x:Int32" x:Key="in_RetryInterval_Seconds">
-                <mva:VisualBasicValue x:TypeArguments="x:Int32" ExpressionText="CINT(in_Config(&quot;Blokus_TurnCheck_Interval&quot;))" />
-              </InArgument>
-              <InArgument x:TypeArguments="x:Int32" x:Key="in_MaxNumberrOfAttempts">
-                <mva:VisualBasicValue x:TypeArguments="x:Int32" ExpressionText="CINT(in_Config(&quot;Blokus_TurnCheck_RetryNo&quot;))" />
-              </InArgument>
+              <InArgument x:TypeArguments="ui:UiElement" x:Key="in_BrowserWindow">[in_BrowserWindow]</InArgument>
+              <InArgument x:TypeArguments="x:String" x:Key="in_PlayerName">[in_PlayerName]</InArgument>
+              <InArgument x:TypeArguments="x:Int32" x:Key="in_RetryInterval_Seconds">[CINT(in_Config("Blokus_TurnCheck_Interval"))]</InArgument>
+              <InArgument x:TypeArguments="x:Int32" x:Key="in_MaxNumberrOfAttempts">[CINT(in_Config("Blokus_TurnCheck_RetryNo"))]</InArgument>
             </ui:InvokeWorkflowFile.Arguments>
           </ui:InvokeWorkflowFile>
           <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" DisplayName="Message Box" sap:VirtualizedContainerService.HintSize="379,59" sap2010:WorkflowViewState.IdRef="MessageBox_1" Text="[&quot;Your Turn Time To Act&quot;]" />
         </Sequence>
       </ui:InterruptibleWhile.Body>
-      <ui:InterruptibleWhile.Condition>
-        <mva:VisualBasicValue x:TypeArguments="x:Boolean" ExpressionText="not gameOver" />
-      </ui:InterruptibleWhile.Condition>
     </ui:InterruptibleWhile>
   </Sequence>
 </Activity>
